Fix blue links under paragraphs wrapping early

--- a/base/static/base/css/style.css
+++ b/base/static/base/css/style.css
@@ -873,7 +873,7 @@ h2.subtitle-text {
 .block-items-text p {
     width: 220px;
     height: auto;
-    margin: 0.5em 2em 0.5em 1em;
+    margin: 0.5em 1em 0.5em 1em;
     vertical-align: top;
 }
 .content-text {
